@@ -351,10 +351,7 @@ You can also define your own game configurations by creating extra
       <application>GNOME Robots</application> was written by Mark Rae
       (<email>m.rae@inpharmatica.co.uk</email>). Please send all comments, suggestions, and bug
       reports to the <ulink url="http://bugs.gnome.org" type="http">GNOME
-      bug tracking database</ulink>.  (Instructions for submitting bug
-      reports can be found <ulink
-      url="http://bugs.gnome.org/Reporting.html" type="http">
-      on-line</ulink>.)  You can also use <application>Bug Report
+      bug tracking database</ulink>. You can also use <application>Bug Report
       Tool</application> (<command>bug-buddy</command>), available in the
       <guisubmenu>Utilities</guisubmenu> submenu of <guimenu>Main
       Menu</guimenu>, for submitting bug reports.
